--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,7 @@
     "@babel/eslint-parser": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "cross-env": "^7.0.3",
-    "eslint": "^8.44.0",
+    "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx": "^0.1.0",
