Create the NavBar
Still need to change the text to light.

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteor-application-template-production",
+  "name": "the-voluntree",
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.22.6",
