--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.4",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.7",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
