--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-odometerjs": "^3.1.3",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "simpl-schema": "^3.4.1",
