--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "graphql": "^16.7.1",
     "meteor-node-stubs": "^1.2.5",
     "moment": "^2.29.4",
+    "odometer": "^0.4.8",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.7",
