--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^4.4.1",
     "classnames": "^2.3.2",
     "core-js": "^3.31.1",
+    "google-maps-react": "^2.0.6",
     "graphql": "^16.7.1",
     "meteor-node-stubs": "^1.2.5",
     "moment": "^2.29.4",
